# vr-cast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
resources/scrcpy/macos-arm-64/: config.h  scrcpy
resources/scrcpy/win-x64/: config.h  scrcpy-server
scripts/: build_macos_arm64.sh  build_usb_only.sh  build_usb_wifi.sh  build_windows_x64.ps1  build_windows_x64.sh  pyi_runtime_wifi_off.py  pyi_runtime_wifi_on.py
src/: loginvrcast.rar
src/loginvrcast/: __main__.py  app.py
src/loginvrcast/casting/: command_builder.py  scrcpy_manager.py
src/loginvrcast/core/: features.py  settings_store.py  state.py  ui_state.py  wifi.py  wifi_runtime.py
src/loginvrcast/device/: __init__.py  adb_monitor.py
src/loginvrcast/tools/: adb_locator.py  scrcpy_locator.py  subprocess_utils.py
src/loginvrcast/ui/: main_window.py  widgets.py
tests/core/: test_features.py  test_ui_state.py  test_wifi_runtime.py
tests/device/: test_wifi_endpoint.py
tests/tools/: test_adb_locator.py
