[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loginvrcast"
version = "0.1.0"
description = "USB casting helper using scrcpy (Quest/ADB)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Avi Kohen" }]
dependencies = [
  "PySide6>=6.7",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]